--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,7 @@ $light-theme: mat.m2-define-light-theme(
 html,
 body {
   height: 100%;
+  min-height: 100vh;
   margin: 0;
   font-family: 'Inter', sans-serif;
   background-color: #fafafa;
